--- a/proyecto/proyecto/proyecto/src/components/Feed.css
+++ b/proyecto/proyecto/proyecto/src/components/Feed.css
@@ -19,7 +19,7 @@
 
 .post img {
     width: 100%;
-    height: 85%; /* Ajusta la altura de la imagen */
+    height: auto; /* Ajusta la altura de la imagen */
     border-radius: 20px;
     object-fit: cover;
 }
