--- a/proyecto/proyecto/proyecto/src/components/BarraLateral.css
+++ b/proyecto/proyecto/proyecto/src/components/BarraLateral.css
@@ -16,6 +16,15 @@
     border: 1px solid rgba(235, 175, 103, 0.3);
 }
 
+@media (max-width: 768px) {
+    .barraLateral {
+        width: 100%;
+        height: auto;
+        position: relative;
+        border-radius: 0;
+    }
+}
+
 .logoContainer {
     padding: 1.5rem;
     display: flex;
@@ -29,13 +38,13 @@
 }
 
 .logoContainer::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
 
 .logo {
@@ -44,7 +53,13 @@
     object-fit: contain;
     margin: 0 auto;
     position: relative;
-  }
+}
+
+@media (max-width: 768px) {
+    .logo {
+        width: 150px;
+    }
+}
 
 .sectionTitle {
     font-size: 1.3rem;
@@ -66,6 +81,14 @@
     position: relative;
     z-index: 1;
     overflow-y: auto;
+}
+
+@media (max-width: 768px) {
+    .imagesContainer {
+        flex-direction: row;
+        overflow-x: auto;
+        padding: 1rem;
+    }
 }
 
 .barraLateral::-webkit-scrollbar {
@@ -97,6 +120,14 @@
     cursor: pointer;
 }
 
+@media (max-width: 768px) {
+    .itemBarra {
+        width: 80px;
+        height: 80px;
+        margin: 0 10px;
+    }
+}
+
 .itemBarra:hover {
     transform: scale(1.05);
 }
@@ -108,36 +139,14 @@
 }
 
 ::-webkit-scrollbar {
-    width: 4px; 
+    width: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #dac19c; 
+    background: #dac19c;
     border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #5c431d; 
-}
-
-
-/*movile style*/
-@media (max-width: 768px) {
-    .barraLateral {
-        align-items: center;
-        justify-content: end;
-    }
-
-    .logoContainer {
-        display: none;
-    }
-
-    .imagesContainer {
-    flex-direction: row; /* Ítems en fila */
-    padding: 0 0.5rem;
-    overflow-x: auto;
-    overflow-y: hidden;
-    gap: 0.5rem;
-  }
-  
+    background: #5c431d;
 }
