--- a/proyecto/proyecto/proyecto/src/components/Boton.css
+++ b/proyecto/proyecto/proyecto/src/components/Boton.css
@@ -9,12 +9,21 @@
     transition: background 0.3s;
     display: block;
     margin: 30px auto;
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     text-align: center;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     line-height: 1.5;
 }
-  
+
+@media (max-width: 768px) {
+    .boton {
+        font-size: 24px;
+        padding: 8px 16px;
+        max-width: 280px;
+    }
+}
+
 .boton:hover {
     background-color: #BF755A;
 }
