--- a/proyecto/proyecto/proyecto/src/components/Entrada.css
+++ b/proyecto/proyecto/proyecto/src/components/Entrada.css
@@ -1,45 +1,57 @@
 .inputContainer {
-  margin-top: 0px;
-  margin-bottom: 25px;
-  text-align: center;
+    margin-top: 0px;
+    margin-bottom: 25px;
+    text-align: center;
+    width: 100%;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .inputField {
-  width: 350px;
-  padding: 20px;
-  font-size: 18px;
-  border: 1px solid black;
-  border-radius: 20px;
-  outline: none;
-  background-color: #f0f0f0;
-  color: rgb(81, 81, 81);
+    width: 100%;
+    padding: 20px;
+    font-size: 18px;
+    border: 1px solid black;
+    border-radius: 20px;
+    outline: none;
+    background-color: #f0f0f0;
+    color: rgb(81, 81, 81);
+}
+
+@media (max-width: 768px) {
+    .inputField {
+        padding: 15px;
+        font-size: 16px;
+    }
 }
 
 .registro-container {
-  width: 100%;
-  min-height: 100vh;
-  overflow-y: auto;
-  position: relative;
+    width: 100%;
+    min-height: 100vh;
+    overflow-y: auto;
+    position: relative;
+    padding: 20px;
 }
 
 .registro-content {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 40px 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 40px 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .logoContainer {
-  margin-bottom: 40px;
+    margin-bottom: 40px;
 }
 
 .entrada {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 40px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 40px;
 }
