--- a/proyecto/proyecto/proyecto/src/components/map.css
+++ b/proyecto/proyecto/proyecto/src/components/map.css
@@ -4,9 +4,8 @@
   align-items: flex-start; 
   height: 130vh;
   margin-bottom: 30px; 
+  padding: 0 20px;
 }
-
-
 
 .letter-text {
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -15,5 +14,18 @@
   color: #bf755a;
   position: relative;
   top: 79px; 
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+@media (max-width: 768px) {
+  .letter-container {
+    height: auto;
+    padding-top: 80px;
+  }
+
+  .letter-text {
+    font-size: 30px;
+    top: 0;
+  }
 }
